# tencentcloud-live-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: server.py
src/tools/: live_api.py
src/utils/: __init__.py  config.py  logger.py  tencent_client.py
